# notion-test

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: connect.py
