[tool.poetry]
name = "notion-test"
version = "0.1.0"
description = "Test environment for editing MAO database in Notion"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^2.0"
python-dotenv = "^1.0"
xarray = "^2023.9"
zarr = "^2.16"


[tool.poetry.group.dev.dependencies]
black = "^23.9"
ipython = "^8.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
